tests/errors/test_12.x
// For condition is not boolean

fn main() -> int {

    let mut i: int = 0;
    for ; i ; i += 1 {

    }

}